Colour Picker Eyedropper Always Picks Black on Wayland
Categories
(Core :: Widget: Gtk, defect, P2)
Tracking
()
People
(Reporter: matrix.org, Assigned: stransky)
References
(Blocks 1 open bug, )
Details
Attachments
(1 file)
When using the HTML colour picker component and selecting the eyedropper the result will always be black. This is true weather you click on a firefox window or elsewhere on the desktop.
Updated•5 years ago
|
Comment 1•5 years ago
•
|
||
Thanks for the report!
Confirmed on Gnome Wayland, Debian Testing, Intel/Mesa. Same behavior with Basic and WebRender on Wayland, EGL/Xwayland, GLX/Xwayland.
STR:
https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/color
Open the color picker, click on the eyedropper symbol and somewhere on the desktop. The detected color is always black.
| Assignee | ||
Comment 2•5 years ago
|
||
I expect it's because Wayland sandboxes processes and does not allow to access resources of other processes. For instance for desktop sharing PipeWire is used.
| Reporter | ||
Comment 3•5 years ago
|
||
It is definitely expected, but it does need to be resolved. Is there an API for colour picker type interactions right now? If not we would probably need to propose something.
| Assignee | ||
Comment 4•5 years ago
|
||
(In reply to Kevin Cox [:kevincox] from comment #3)
It is definitely expected, but it does need to be resolved. Is there an API for colour picker type interactions right now? If not we would probably need to propose something.
I'm not aware of any such API.
| Assignee | ||
Comment 5•5 years ago
|
||
Jonas, do you know if there's any such API or mechanism on Wayland?
Thanks.
Comment 6•5 years ago
|
||
(In reply to Martin Stránský [:stransky] from comment #5)
Jonas, do you know if there's any such API or mechanism on Wayland?
Thanks.
org.freedesktop.portal.Screenshot.PickColor:
| Assignee | ||
Comment 7•5 years ago
|
||
Awesome, Thanks!
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 8•4 years ago
|
||
Updated•4 years ago
|
| Assignee | ||
Comment 9•4 years ago
|
||
Comment 10•4 years ago
|
||
Comment 11•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
Description
•