Bug 1673000 [Linux] Use Gtk color picker, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D120324